# pbi-plot-styler

./: CONTRIBUTING.md  MARKETING.md  README.md  RELEASE-NOTES.md  pyproject.toml
docs/explanation/: field-parameter-reporting.md
docs/reference/: cli.md
docs/tutorials/: getting-started.md
examples/coffee-roastery/: plotstyler.toml
src/pbi_plot_styler/: __init__.py  cli.py  config.py  report.py  tmdl.py
tests/: conftest.py  test_cli.py  test_restyle.py  test_tmdl.py
tests/fixtures/roastery/Roastery.Report/: definition.pbir
tests/fixtures/roastery/Roastery.Report/definition/pages/: pages.json
tests/fixtures/roastery/Roastery.Report/definition/pages/monthlyperformance/: page.json
tests/fixtures/roastery/Roastery.Report/definition/pages/monthlyperformance/visuals/combo01/: visual.json
tests/fixtures/roastery/Roastery.Report/definition/pages/monthlyperformance/visuals/slicer01/: visual.json
tests/fixtures/roastery/Roastery.Report/definition/pages/seasonaltrends/: page.json
tests/fixtures/roastery/Roastery.Report/definition/pages/seasonaltrends/visuals/combo02/: visual.json
tests/fixtures/roastery/Roastery.SemanticModel/definition/tables/: Beans.tmdl  Calendar.tmdl  Orders.tmdl  Quality Measures.tmdl  Sales Measures.tmdl  x-Plot Specific 1.tmdl  x-Plot Specific 2.tmdl  y-Plot Specific.tmdl
